--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jongor_software.android.sunshine.MainActivity" />
         </activity>
+
+        <provider
+            android:authorities="com.jongor_software.android.sunshine"
+            android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
