--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <provider
             android:authorities="com.jongor_software.android.sunshine"
             android:name=".data.WeatherProvider" />
+        <service android:name=".service.SunshineService"/>
     </application>
 
 </manifest>
